# number-guessing

./: .gitattributes  .gitignore  CMakeLists.txt  Game.c  Game.h  README.md  main.c  numberGuessingGame.md  numberGuessingGameMilestone1.md  numberGuessingGameMilestone2.md  numberGuessingGameMilestone3.md  terminal.c  terminal.h  utils.c  utils.h
judge/: CMakeLists.txt  valid_Game.c  valid_Game.h  valid_main.c  valid_terminal.c  valid_terminal.h  valid_utils.c  valid_utils.h
numberGuessing/: README.md  terminal.c  utils.c
numberGuessingWithBlanks/: Game.c  Game.h  terminal.c  utils.c
